fixes bug 192022 "Web page progress bar in statusbar rarely works when browsing, stays blank" r=biesi sr=dbaron a=chofmann